--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="minute"></div>
             <div id="second"></div>
         </div>
-        <div id="show"></div>
+        <div id="show">12:00:00 AM</div>
     </body>
 <script src="index.js"></script>
 </html>
