--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <div id="second"></div>
         </div>
         <div id="show">12:00:00 AM</div>
+        <audio autoplay loop>
+            <source type="audio/mp3" src="clock.mp3">
+        </audio>
     </body>
 <script src="index.js"></script>
 </html>
