--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="show">12:00:00 AM</div>
         <audio autoplay="autoplay" loop>
-            <source type="audio/mp3" src="clock.mp3">
+            <source type="audio/mpeg" src="clock.mp3">
              Your browser doesn't support this audio file
         </audio>
     </body>
