--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="second"></div>
         </div>
         <div id="show">12:00:00 AM</div>
-        <audio autoplay="autoplay" loop controls>
+        <audio autoplay loop>
             <source type="audio/mpeg" src="clock.mp3">
              Your browser doesn't support this audio file
         </audio>
